# libraw_rggb_android_striped_pattern

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  rggb.raw
prebuilt/opencv-4.8.0/sdk/native/jni/: OpenCV-arm64-v8a.mk  OpenCV.mk
prebuilt/opencv-4.8.0/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
prebuilt/opencv-4.8.0/sdk/native/jni/include/opencv2/: cvconfig.h  opencv_modules.hpp
